; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/bridge/extr_ti-sn65dsi86.c_ti_sn_bridge_post_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/bridge/extr_ti-sn65dsi86.c_ti_sn_bridge_post_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_bridge = type { i32 }
%struct.ti_sn_bridge = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_bridge*)* @ti_sn_bridge_post_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ti_sn_bridge_post_disable(%struct.drm_bridge* %0) #0 {
  %2 = alloca %struct.drm_bridge*, align 8
  %3 = alloca %struct.ti_sn_bridge*, align 8
  store %struct.drm_bridge* %0, %struct.drm_bridge** %2, align 8
  %4 = load %struct.drm_bridge*, %struct.drm_bridge** %2, align 8
  %5 = call %struct.ti_sn_bridge* @bridge_to_ti_sn_bridge(%struct.drm_bridge* %4)
  store %struct.ti_sn_bridge* %5, %struct.ti_sn_bridge** %3, align 8
  %6 = load %struct.ti_sn_bridge*, %struct.ti_sn_bridge** %3, align 8
  %7 = getelementptr inbounds %struct.ti_sn_bridge, %struct.ti_sn_bridge* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.ti_sn_bridge*, %struct.ti_sn_bridge** %3, align 8
  %12 = getelementptr inbounds %struct.ti_sn_bridge, %struct.ti_sn_bridge* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = call i32 @clk_disable_unprepare(i64 %13)
  br label %15

15:                                               ; preds = %10, %1
  %16 = load %struct.ti_sn_bridge*, %struct.ti_sn_bridge** %3, align 8
  %17 = getelementptr inbounds %struct.ti_sn_bridge, %struct.ti_sn_bridge* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @pm_runtime_put_sync(i32 %18)
  ret void
}

declare dso_local %struct.ti_sn_bridge* @bridge_to_ti_sn_bridge(%struct.drm_bridge*) #1

declare dso_local i32 @clk_disable_unprepare(i64) #1

declare dso_local i32 @pm_runtime_put_sync(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
